test/error/ast/ImportModuleWithError.mod
MODULE ImportModuleWithError;
IMPORT BadModule;
END ImportModuleWithError.
